# EnvyEngine

./: .gitignore  CMakeLists.txt  LICENSE
Client/: CMakeLists.txt
Client/src/: Application.cpp  Application.h  CMakeLists.txt  Camera.h  GLFWCallbacks.cpp  GLFWCallbacks.h  Material.h  Path.cpp  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h  main.cpp
Client/src/meshes/: Quad.cpp  Quad.h
Client/src/shaders/: default.comp  default.frag  default.vert
Engine/: CMakeLists.txt  Config.cmake.in
Engine/include/Envy/: Envy.h  EnvyInstance.h
Engine/include/Envy/core/: Assert.h  Debug.h  Defines.h  Logging.h
Engine/include/Envy/opengl/: Cubemap.h  Framebuffer.h  IndirectBuffer.h  Pipeline.h  ResourceManager.h  ShaderProgram.h  Texture2D.h  UniformBuffer.h  VertexArray.h
Engine/include/Envy/util/: ResourceVector.h
Engine/src/: CMakeLists.txt  EnvyInstance.cpp
Engine/src/core/: Debug.cpp
Engine/src/opengl/: Cubemap.cpp  Framebuffer.cpp  IndirectBuffer.cpp  Pipeline.cpp  ResourceManager.cpp  ShaderProgram.cpp  Texture2D.cpp  UniformBuffer.cpp  VertexArray.cpp
Engine/src/shaders/cubemaps/: cubemap.frag  cubemap.vert
scripts/: build_test.bat  build_test.sh
